fix(slider): updates positioning method to prevent overflow issues
Create separate models for demos of themeing classes with sliders.

Closes #1343
Closes #1431
Closes #1391

--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -52,6 +52,11 @@ md-slider {
   display: block;
   margin-left: 4px;
   margin-right: 4px;
+  padding: 0;
+
+  .md-slider-wrapper {
+    position: relative;
+  }
 
   /**
    * Track
@@ -84,10 +89,9 @@ md-slider {
   .md-thumb-container {
     position: absolute;
     left: 0;
-    top: 0;
-    right: 0;
-    transform: translate3d(0,0,0);
-    transition: transform 0.1s linear;
+    top: 50%;
+    transform: translate3d(-50%,-50%,0);
+    transition: left 0.1s linear;
   }
   .md-thumb {
     z-index: 1;
